--- a/src/Styles/Common/Header.css
+++ b/src/Styles/Common/Header.css
@@ -1,16 +1,20 @@
 .App-header{
-    background-color: lightblue;
-    height: max-content;
+    background-color: darkblue;
+    height: 50px;
     color: white;
     display: flex;
     flex-direction: row;
     gap: 3.333%;
-    padding: 0.5%;
+    /*padding: 0.5%;*/
 }
-.logo-div{flex: 20%;}
+.logo-div{
+    flex: 20%;
+    justify-content: center;
+}
 .logo-div img{
     width: 100%;
     height: 100%;
+    margin: auto;
 }
 .header-options{flex: 50%;}
 .header-options ul,.login-option ul{
@@ -19,18 +23,19 @@
     justify-content: center;
     align-items: center;
     list-style: none;
-    padding: 0;
+    padding: unset;
     height: 100%;
+
 }
 .header-options ul li{
-    margin: 0 5%;
+    margin: 0 2.5%;
 }
 .login-option{
     flex: 20%;
 }
 .header-options ul li a, .login-option ul li a{
     text-decoration: none;
-    color: black;
+    color: white;
     font-size: 1.5rem;
     font-weight: bold;
     display: block;
