--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ li{
   list-style: none;
 }
 a{
-  /*text-decoration: none !important;*/
+  text-decoration: none !important;
   text-underline: none !important;
 }
 
