--- a/src/Styles/Profiles/ProfileResultsFilter.css
+++ b/src/Styles/Profiles/ProfileResultsFilter.css
@@ -2,21 +2,34 @@
     margin: 1% 5%;
     width: 90%;
     border-radius: 8px;
+    display: flex;
+}
+.profile-filter-options{
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+    gap: 2%;
 }
 .filter-search-group{
+    flex: 50%;
+    margin-top: unset !important;
     display: flex;
     flex-direction: row;
     padding: unset !important;
-    width: 100%;
-}
-.dropdown{
-    width: 200px !important;
-    height: 100% !important;
-    margin: 10px 10px 10px 10px !important;
+    /*width: 100%;*/
+    /*gap: 10%;*/
 }
 .filter-search{
-    flex:60%
+    flex:  50%;
+    width: 100%;
 }
 .filter-search-button{
     flex: 5%;
 }
+.dropdown{
+    width: 250px !important;
+    height: 100% !important;
+    /*margin: 10px 10px 10px 20px !important;*/
+}
+
