--- a/src/Styles/Profiles/User Profile/UpdatePersonalInformation.css
+++ b/src/Styles/Profiles/User Profile/UpdatePersonalInformation.css
@@ -1,27 +1,25 @@
-.personal-profile-update-form{
-    /*display: block;*/
-    width: 100%;
-    margin: 2% 1%;
+.account-settings{
+    /*margin: 0 auto;*/
+    width: 60% !important;
+    /*max-width: 500px !important;*/
     padding: 20px;
-    border: 1px solid #ccc;
+    box-sizing: border-box;
     height: max-content;
-}
-.personal-profile-update-fields{
-    display: block;
-    width: 100%;
-    padding: 10px;
-}
-.personal-profile-update-button{
-    display: block;
-    width: 10%;
-    padding: 0.5%;
-    margin-top: 1%;
-    text-align: center;
-    float: right;
+    margin: 2% 1%;
+
+
 }
 .personal-profile-update-main-button{
     display: block;
+    width: 20%;
+    margin:1% 1% 1% 0;
+}
+.profile-input{
+    border-radius: 5px !important;
+}
+.label{
+    margin-top: 1em;
+}
+.profile-upload{
     width: 50%;
-    padding: 0.5%;
-    margin:1% auto;
 }
