--- a/src/Styles/Profiles/AuthorRecommendations.css
+++ b/src/Styles/Profiles/AuthorRecommendations.css
@@ -1,13 +1,25 @@
+.author-recommendations{
+    width: 100%;
+    margin: 0;
+    /*padding: 0;*/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #f5f5f5;
+    padding: 1%;
+}
 .author-recommendations h3
 {
     width: 90%;
-    margin: 1% auto;
+    margin: 1% 1.5% 1% 0;
+
 }
 .recommendation-div{
     margin: auto;
-    width: 90%;
+    width: 100%;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(1, 1fr);
     gap: 1%;
 }
@@ -39,6 +51,6 @@
     font-weight: normal !important;
 }
 .visit-profile-button{
-    width: 50%;
-    margin: 2% 1.5% 1.5%;
+    width: 70%;
+    margin:  2% 17%;
 }
