--- a/src/Styles/Profiles/User Profile/ProfileArticles.css
+++ b/src/Styles/Profiles/User Profile/ProfileArticles.css
@@ -69,6 +69,22 @@ This class is only for saved articles. In the main development this will be sepa
     border: unset;
     font-weight: bolder;
 }
+.admin-author-update
+{
+    margin-top: 2%;
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+}
+.admin-author-update > form{
+    width: 55%;
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+}
+.admin-article-delete > form{
+    width:60%
+}
 .Tab-Option:hover{
     background-color: #1976D2;
     color: white;
