--- a/src/Styles/Common/Header.css
+++ b/src/Styles/Common/Header.css
@@ -1,6 +1,9 @@
+.header-mobile{
+    display: none;
+}
 .App-header{
     background-color: darkblue;
-    height: 50px;
+    height: max-content;
     color: white;
     display: flex;
     flex-direction: row;
@@ -8,7 +11,7 @@
     /*padding: 0.5%;*/
 }
 .logo-div{
-    flex: 20%;
+    flex: 25%;
     justify-content: center;
 }
 .logo-div img{
@@ -16,8 +19,8 @@
     height: 100%;
     margin: auto;
 }
-.header-options{flex: 50%;}
-.header-options ul,.login-option ul{
+.header-options{flex: 75%;}
+.header-options ul{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -33,11 +36,55 @@
 .login-option{
     flex: 20%;
 }
-.header-options ul li a, .login-option ul li a{
+.header-options ul li a {
     text-decoration: none;
     color: white;
     font-size: 1.5rem;
-    font-weight: bold;
+    font-weight: normal;
     display: block;
     margin: auto;
+}
+@media screen and (max-width: 1024px){
+    .App-header{
+        gap: 0;
+    }
+}
+@media screen and (max-width: 768px) {
+    .App-header{
+        gap: 0;
+    }
+    .logo-div{
+        flex: 35%;
+        padding: 1%;
+    }
+    .logo-div img{
+        width: 90%;
+        height: 90%;
+        margin: auto;
+        align-items: center;
+    }
+    .header-options{flex: 65%;}
+    .header-options ul li a {
+        font-size: 1rem;
+    }
+}
+@media screen and (max-width: 426px) {
+    .App-header{
+        height: max-content;
+        flex-direction: column;
+        gap: 5%;
+    }
+    .logo-div{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+    .header-options ul li a {
+        font-size: 1.3rem;
+    }
+}
+@media screen and (max-width: 320px){
+    .header-options ul li a {
+        font-size: 1rem;
+    }
 }
