--- a/src/Styles/Home-page/Search-Header.css
+++ b/src/Styles/Home-page/Search-Header.css
@@ -21,11 +21,18 @@
 /*
 This is just a 'TUCH'. Not the final solution.
  */
-.search-form div{
-    width: 252%;
+.search-form{
+    width: 100%;
     display: flex;
     flex-direction: row;
-    margin-left: -77%;
+    /*margin-left: -77%;*/
+}
+.form{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 .search-input{
             flex: 85%;
@@ -38,4 +45,55 @@ This is just a 'TUCH'. Not the final solution.
             border-top-left-radius: 0;
             border-bottom-left-radius: 0;
             font-size:large;
+}
+@media screen and (max-width: 1024px){
+    .search-area{
+        height: 40vh;
+        width: 100%;
+    }
+    .search-content{
+        width: 60%;
+    }
+    /**/
+}
+@media screen and (max-width: 768px){
+    .search-area{
+        height: 40vh;
+        width: 100%;
+
+    }
+    .search-content{
+        width: 80%;
+    }
+    /**/
+}
+@media screen and (max-width: 425px){
+    .search-area{
+        height: 40vh;
+        width: 100%;
+
+    }
+    .search-content{
+        width: 90%;
+    }
+}
+@media screen and (max-width: 375px){
+    .search-area{
+        height: 40vh;
+        width: 100%;
+
+    }
+    .search-content{
+        width: 95%;
+    }
+}
+@media screen and (max-width: 375px){
+    .search-area{
+        height: 40vh;
+        width: 100%;
+
+    }
+    .search-content{
+        width: 98%;
+    }
 }
