--- a/src/Styles/Profiles/User Profile/UserProfileOptions.css
+++ b/src/Styles/Profiles/User Profile/UserProfileOptions.css
@@ -27,4 +27,23 @@
     background-color: #fff;
     color: #000;
     margin: 2px 0 0 auto;
+    text-align: left !important;
+}
+.profile-mobile-options{
+    width: 100%;
+    margin: unset;
+}
+@media screen and (max-width: 1024px) {
+    .profile-options{
+        display: none;
+    }
+.profile-mobile-options{
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+        width: 100%;
+        border: 1px solid #ccc;
+        height: max-content;
+    }
+
 }
