--- a/src/Styles/Home-page/Search-Header.css
+++ b/src/Styles/Home-page/Search-Header.css
@@ -1,12 +1,14 @@
 .search-area{
     width: 100%;
-    height: 50vh;
+    height: 60vh;
     background-size: 100% 100%;
+    background-color: #0071c5;
+    opacity: 1;
 }
 .search-area-content{
     width: 100%;
     height: 100%;
-    background-color: rgba(255,255,255,0.8);
+    /*background-color: rgba(255,255,255,0.8);*/
     display: flex;
     justify-content: center;
 }
@@ -17,6 +19,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    color: white;
+}
+.search-content h1{
+    font-weight: bolder;
+    margin: 0;
 }
 /*
 This is just a 'TUCH'. Not the final solution.
@@ -25,9 +32,10 @@ This is just a 'TUCH'. Not the final solution.
     width: 100%;
     display: flex;
     flex-direction: row;
-    /*margin-left: -77%;*/
+    margin-top: 2.5%;
 }
 .form{
+    height: 50px;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -36,7 +44,7 @@ This is just a 'TUCH'. Not the final solution.
 }
 .search-input{
             flex: 85%;
-            height: 40px;
+            height: 100%;
             border-top-right-radius: 0;
             border-bottom-right-radius: 0;
 }
@@ -45,6 +53,7 @@ This is just a 'TUCH'. Not the final solution.
             border-top-left-radius: 0;
             border-bottom-left-radius: 0;
             font-size:large;
+    height: 100%;
 }
 @media screen and (max-width: 1024px){
     .search-area{
@@ -65,6 +74,9 @@ This is just a 'TUCH'. Not the final solution.
     .search-content{
         width: 80%;
     }
+    .search-content h3{
+        text-align: center;
+    }
     /**/
 }
 @media screen and (max-width: 425px){
@@ -83,6 +95,7 @@ This is just a 'TUCH'. Not the final solution.
     .search-content h3{
         /*display: inline-block;*/
         font-size: 1rem;
+        text-align: center;
     }
 }
 @media screen and (max-width: 375px){
