--- a/src/Styles/Profiles/ProfileResultsFilter.css
+++ b/src/Styles/Profiles/ProfileResultsFilter.css
@@ -1,6 +1,7 @@
 .result-profile-filters{
-    margin: 1% 5%;
-    width: 90%;
+    margin: 1% 0 0 0;
+    width: 70%;
+    padding-left: 1%;
     border-radius: 8px;
     display: flex;
     margin-left: unset  !important;
@@ -18,8 +19,6 @@
     display: flex;
     flex-direction: row;
     padding: unset !important;
-    /*width: 100%;*/
-    /*gap: 10%;*/
 }
 .filter-search{
     flex:  50%;
