--- a/src/Styles/Profiles/User Profile/Charts.css
+++ b/src/Styles/Profiles/User Profile/Charts.css
@@ -1,14 +1,13 @@
 .charts{
-    /*background-color: #fff;*/
-    /*border: 1px solid #ccc;*/
-    /*border-radius: 5px;*/
-    /*padding: 10px;*/
-    /*margin: 10px 0;*/
-    /*box-shadow: 0 0 5px #ccc;*/
     display: flex;
     flex-direction: column;
-    /*margin-top: 2%;*/
+    width: 100%;
 }
 .Charts_Div{
-    margin-top: 2%;
+    margin: auto;
+    width: 70%;
+}
+.Chart{
+    width: 100%;
+    margin: auto;
 }
