--- a/src/Styles/Profiles/User Profile/General.css
+++ b/src/Styles/Profiles/User Profile/General.css
@@ -4,8 +4,8 @@
     flex-direction: row;
 }
 .main-user-profile{
-    margin: 2% 1%;
-    width: 75%;
+    margin: 0.5% 0 0 0;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
