--- a/src/Styles/Profiles/User Profile/Metrics.css
+++ b/src/Styles/Profiles/User Profile/Metrics.css
@@ -1,10 +1,10 @@
 .Metrics-Field{
-    border: 1px solid #ccc;
-    width: 50% !important;
+    border: unset;
+    width:100% !important;
     padding: 20px;
     box-sizing: border-box;
     height: max-content;
-    margin: 2% 1%;
+    margin: 0.5% 0 0 0;
 }
 .researcher-quality{
     margin-top: 2%;
@@ -16,6 +16,6 @@
     flex-direction: column-reverse;
 }
 .chart-div{
-    flex: 50%;
+    flex: 40%;
     height: 10% !important;
 }
