--- a/src/Styles/Profiles/User Profile/ProfileArticles.css
+++ b/src/Styles/Profiles/User Profile/ProfileArticles.css
@@ -1,23 +1,17 @@
 .profile-articles{
-    /*margin: 0 auto;*/
-    width: 70% !important;
-    /*max-width: 500px !important;*/
+    width: 100% !important;
     padding: 20px;
     box-sizing: border-box;
     height: max-content;
-    border: 1px solid #ccc;
-    margin: 2% 1%;
+    margin: 0.5% 0 0 0;
 }
 .PersonalArticles{
     margin-top: 2%;
     display: flex;
-    /*width: 100%;*/
-    /*padding: 10px;*/
     flex-direction: column;
     gap: 2em;
 }
 .remove-button{
-    /*margin-top: unset;*/
     width: 20%;
     margin: 0 40% ;
 }
@@ -30,7 +24,6 @@
     margin-bottom: 2%;
 }
 .remove-select{
-    /*font-size: 1.2rem;*/
     font-weight: bolder;
 }
 /*
@@ -50,12 +43,12 @@ This class is only for saved articles. In the main development this will be sepa
 /*----------------------------------------------------------------------------------------------------------------------*/
 
 .saved-articles{
-    border: 1px solid #ccc;
+    /*border: 1px solid #ccc;*/
     padding: 20px;
-    margin: 2% 1%;
+    margin: 0.5% 0 0 0;
     display: flex;
     flex-direction: column;
-    width: 70%;
+    width: 100%;
 }
 .form-select-finding{
     flex: 10% !important;
@@ -71,7 +64,7 @@ This class is only for saved articles. In the main development this will be sepa
 }
 .admin-author-update
 {
-    margin-top: 2%;
+    /*margin-top: 2%;*/
     display: flex;
     flex-direction: column;
     gap: 2em;
@@ -86,10 +79,10 @@ This class is only for saved articles. In the main development this will be sepa
     width:60%
 }
 .Tab-Option:hover{
-    background-color: #1976D2;
+    background-color: #6495ED;
     color: white;
 }
 .nav-link.active{
-    background-color: #1976D2 !important;
+    background-color: #6495ED !important;
     color: white !important;
 }
