--- a/src/Styles/Profiles/User Profile/UpdatePersonalInformation.css
+++ b/src/Styles/Profiles/User Profile/UpdatePersonalInformation.css
@@ -1,11 +1,12 @@
 .account-settings{
     /*margin: 0 auto;*/
-    width: 70% !important;
+    width: 100% !important;
     /*max-width: 500px !important;*/
     padding: 20px;
     box-sizing: border-box;
     height: max-content;
-    margin: 2% 1%;
+    margin: 0.5% 0 0 0;
+
 
 
 }
