--- a/src/Styles/Profiles/User Profile/UpdateResearcherInformation.css
+++ b/src/Styles/Profiles/User Profile/UpdateResearcherInformation.css
@@ -1,9 +1,9 @@
 .personal-profile-update-form{
     /*display: block;*/
-    width: 70%;
-    margin: 2% 1%;
+    width: 100%;
+    margin: 0.5% 0 0 0;
     padding: 20px;
-    border: 1px solid #ccc;
+    border: unset;
     height: max-content;
 }
 .personal-profile-update-fields{
