--- a/src/Styles/Profiles/User Profile/UserProfileOptions.css
+++ b/src/Styles/Profiles/User Profile/UserProfileOptions.css
@@ -3,31 +3,40 @@
     flex-direction: column;
     padding: 10px;
     width: 20%;
-    margin: 2% 1%;
-    border: 1px solid #ccc;
-    height: max-content;
+    margin: 0;
+    /*border: 1px solid #ccc;*/
+    height: 100vh;
+    position: sticky;
+    top: 0;
+    bottom: 0;
+    background-color: #0071c5;
 }
 .profile-options>button{
     display: block;
     width: 100%;
-    padding: 5px 40px;
     margin: 2% 0;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    color: #000;
-    font-weight: 600;
+    border: unset;
+    background-color: #0071c5;
+    text-align: left;
     cursor: pointer;
+    font-size: 1.2rem;
+    color: #ffffff;
+    border-bottom: 1px solid #ffffff;
+    border-radius: unset;
 }
 .profile-detail-options button{
     display: flex;
     flex-direction: row;
     width: 90%;
-    border: 1px solid #ccc;
-    height: max-content;
-    background-color: #fff;
-    color: #000;
+    border: unset;
+    border-bottom: 1px solid #ffffff;
+    background-color: #0071c5;
+    border-radius: unset;
+    color: #ffffff;
     margin: 2px 0 0 auto;
     text-align: left !important;
+
+
 }
 .profile-mobile-options{
     width: 100%;
