--- a/src/Styles/Profiles/AuthorRecommendations.css
+++ b/src/Styles/Profiles/AuthorRecommendations.css
@@ -1,6 +1,6 @@
 .author-recommendations{
-    width: 100%;
-    margin: 0;
+    width: 90%;
+    margin: 1% auto;
     /*padding: 0;*/
     display: flex;
     flex-direction: column;
@@ -11,7 +11,7 @@
 }
 .author-recommendations h3
 {
-    width: 90%;
+    width: 98%;
     margin: 1% 1.5% 1% 0;
 
 }
@@ -19,7 +19,7 @@
     margin: auto;
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(1, 1fr);
     gap: 1%;
 }
