--- a/src/Styles/Common/Footer.css
+++ b/src/Styles/Common/Footer.css
@@ -1,6 +1,6 @@
 .footer{
     /*margin-top: 0.5%;*/
-    background-color: #0071c5;
+    background-color: #006699;
     color: #fff;
     padding: 35px 35px 0 35px;
     text-align: center;
