--- a/src/Styles/Headers/Header.css
+++ b/src/Styles/Headers/Header.css
@@ -1,5 +1,5 @@
 .App-header{
-    background-color: #0071c5;
+    background-color: #006699;
     height: 80px;
     color: white;
     display: flex;
@@ -49,7 +49,7 @@
     align-items: center;
 }
 .login-Div ul li a button{
-    background-color: #0071c5;
+    background-color: #006699;
     color: white;
     font-size: 1.2rem;
     font-weight: bolder;
