--- a/src/Styles/Home-page/Search-Header.css
+++ b/src/Styles/Home-page/Search-Header.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 60vh;
     background-size: 100% 100%;
-    background-color: #0071c5;
+    background-color: #006699;
     opacity: 1;
 }
 .search-area-content{
