Profile Data Being Fetched Properly

--- a/src/Styles/Common/Sign_Up.css
+++ b/src/Styles/Common/Sign_Up.css
@@ -38,3 +38,8 @@
     width: 100%;
     text-align: center;
 }
+.disabled_link{
+    pointer-events: none !important;
+    cursor: default;
+    color:Gray !important;
+}
