--- a/src/Styles/Profiles/User Profile/ProfileArticles.css
+++ b/src/Styles/Profiles/User Profile/ProfileArticles.css
@@ -37,11 +37,22 @@ This class is only for saved articles. In the main development this will be sepa
     padding: 20px;
     box-sizing: border-box;
     height: max-content;
-    border: 1px solid #ccc;
+    /*border: 1px solid #ccc;*/
     margin: 2% 1%;
+    align-items: center;
 }
 /*----------------------------------------------------------------------------------------------------------------------*/
-
+.profile-articles-uploadform{
+    display: flex;
+    flex-direction: column;
+    width: 70% !important;
+    box-sizing: border-box;
+    height: max-content;
+    margin: 2% 1%;
+}
+.upload-form{
+    margin: 2% 0;
+}
 .saved-articles{
     /*border: 1px solid #ccc;*/
     padding: 20px;
@@ -85,4 +96,30 @@ This class is only for saved articles. In the main development this will be sepa
 .nav-link.active{
     background-color: #6495ED !important;
     color: white !important;
+}
+.formLabel{
+    display: block !important;
+    margin-right: 1.2%;
+}
+.form-button{
+    margin-top: unset;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.form-button button{
+    width: 100px;
+}
+.articleUploadOption{
+    margin: 2% 0;
+    background-color: lightgray !important;
+    color: black;
+    border: unset;
+    font-weight: bolder;
+}
+.articleUploadOption:hover{
+    color: black;
+    border: 1px solid darkgray ;
+    background-color: unset !important;
 }
