Profile Page Paginationa and Search Parameter is left

--- a/src/Styles/Profiles/ProfileResultsHeader.css
+++ b/src/Styles/Profiles/ProfileResultsHeader.css
@@ -1,6 +1,6 @@
 .Card_Div{
     padding: 2%;
-    width: 100%;
+    width: 70vw;
     flex-direction: row;
     margin: 0 1.5% 1% 0;
     border-radius: unset;
