--- a/src/Styles/Result Page/ResultShowing.css
+++ b/src/Styles/Result Page/ResultShowing.css
@@ -24,7 +24,7 @@
     display:inline-block;
     border-radius: 20px;
     padding: 0.5% 2% 0.5% 2%;
-    margin: 0 1% 0 0;
+    margin: 1% 1% 0 0;
     border: 1px solid lightgray;
     color: black;
 }
