--- a/src/Styles/Headers/Header.css
+++ b/src/Styles/Headers/Header.css
@@ -1,3 +1,9 @@
+.navigation-icon{
+    display: none;
+}
+
+
+
 .App-header{
     background-color: #006699;
     height: 80px;
@@ -70,6 +76,12 @@
     }
 }
 @media screen and (max-width: 768px) {
+
+    .navigation-icon{
+        display: block;
+        float: right;
+        width: 40px;
+    }
     .App-header{
         gap: 0;
     }
