--- a/src/Styles/Headers/HomePageheader.css
+++ b/src/Styles/Headers/HomePageheader.css
@@ -4,4 +4,86 @@
     grid-template-columns: 2.5fr 1fr !important;
     color: white;
     gap: 2.5%;
+    margin-bottom: 3px;
+    
+
+}
+#mobile{
+    display: none;
+    background-color: #006699;
+    color: white;
+}
+
+.login-Div{
+    background-color: none;
+}
+
+@media (max-width:500px){
+
+
+    .Home-Page-Header {
+        display: flex !important;
+        flex-direction: column;
+        
+        /* margin-bottom: 10px ; */
+    }
+
+    .Home-Page-Header .header-options ul{
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 20px;
+        /* border-bottom: 1px solid white; */
+    }
+
+    .Home-Page-Header .header-options ul li{
+        border-bottom: 2px solid white;
+        width: 100%;
+        text-align: center;
+    }
+
+
+
+    #mobile img{
+        color: #1a1a1a;
+        font-size: 15px;
+        padding-left: 20px;
+        cursor: pointer;
+        width: 90px;
+        align-items: center;
+    }
+
+    #mobile {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+      
+      #mobile text {
+        flex: 8;
+        text-align: center;
+        font-size: 20px;
+      }
+      
+      #mobile img {
+        margin-left: 0px;
+      }
+
+      
+
+      
+    .nav-clicked{
+        display:none !important;
+    }
+
+    .Home-Page-Header{
+        margin-bottom: 0;
+    }
+
+
+
+    .login-Div{
+        display: none;
+     
+    }
+
 }
