--- a/src/Styles/Headers/HomePageheader.css
+++ b/src/Styles/Headers/HomePageheader.css
@@ -4,7 +4,7 @@
     grid-template-columns: 2.5fr 1fr !important;
     color: white;
     gap: 2.5%;
-    margin-bottom: 3px;
+    /*margin-bottom: 3px;*/
     
 
 }
@@ -25,7 +25,7 @@
         display: flex !important;
         flex-direction: column;
         
-        /* margin-bottom: 10px ; */
+         padding-bottom: 100px !important;
     }
 
     .Home-Page-Header .header-options ul{
@@ -81,9 +81,9 @@
 
 
 
-    .login-Div{
-        display: none;
-     
-    }
+    /*.login-Div{*/
+    /*    margin-bottom: 100px !important;*/
+
+    /*}*/
 
 }
