--- a/src/Styles/Headers/Header.css
+++ b/src/Styles/Headers/Header.css
@@ -50,12 +50,12 @@
     margin: auto;
     font-weight: bolder;
 }
-.login-Div ul li a{
+.login-Div ul li button{
     width: 100%;
     align-items: center;
 }
-.login-Div ul li a button{
-    background-color: #006699;
+.login-Div ul li button{
+    background-color: #0071c5 !important;
     color: white;
     font-size: 1.2rem;
     font-weight: bolder;
