--- a/src/Styles/Result Page/Search-Area.css
+++ b/src/Styles/Result Page/Search-Area.css
@@ -8,6 +8,12 @@
     justify-content: space-between;
     align-items: center;
 }
+
+.dropDownButton{
+    width: 1000px ;
+    height: 300px;
+    overflow: scroll;
+}
 .middle-search-form,.advance-search-input,.tags-dive
 {
     width: 50%;
