--- a/src/Styles/Result Page/ResultShowing.css
+++ b/src/Styles/Result Page/ResultShowing.css
@@ -12,8 +12,11 @@
     grid-template-columns: 1fr 1fr;
     grid-gap: 2rem;
     border-bottom: 1px solid lightgray;
+    margin: 0 5% 0 5%;
+
 }
 .heading{
+    cursor: pointer;
     font-size: 1.5rem;
     font-weight: 600;
     margin-bottom: 1%;
@@ -21,6 +24,7 @@
 }
 
 .tags{
+    cursor: pointer;
     display:inline-block;
     border-radius: 20px;
     padding: 0.5% 2% 0.5% 2%;
@@ -32,6 +36,24 @@
     margin-left: 1%;
     background-color: white;
     margin-bottom: 0.7%;
+}
+.savedArticle{
+    pointer-events: none;
+    opacity: 0.5;
+    background-color: white;
+    color: rgb(0,123,255);
+    border-radius: 20px;
+    border: 1px solid rgb(0,123,255);
+}
+.animationDiv{
+    width: 50vw;
+    height: 50vh;
+    margin: auto;
+    padding: 12% 12% 12% 21%;
+}
+.animation{
+    width: 100px;
+    height: 100px;
 }
 .tags:hover, .tags-button:hover{
     background-color: white;
